hi@spectrum --> hi@tryretool

--- a/desktop/package.json
+++ b/desktop/package.json
@@ -4,7 +4,7 @@
   "homepage": "https://spectrum.chat",
   "author": {
     "name": "Space Program Inc.",
-    "email": "hi@spectrum.chat"
+    "email": "hi@tryretool.com"
   },
   "repository": "https://github.com/withspectrum/spectrum",
   "version": "1.0.5",
